--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,37 @@
-@font-face {
-  font-family: 'Alte Din';
-  src: url('alte-din.regular.ttf');
+html, body, #root {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
 }
 
 body {
-  margin: 0;
+  font-family: 'Lato', sans-serif;
+  background-color: #fafafa;
+  color: #333;
+}
+
+.full-screen {
+  width: 100%;
+  height: 100%;
   padding: 0;
-  font-family: 'Roboto', sans-serif;
+  margin: 0;
+}
+
+.full-width {
+  width: 100%;
+}
+
+button {
+  border: 1px solid white !important;
+  color: white;
+  background-color: #21ce99;
+  border: none;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  font-family: "Montserrat";
+  font-weight: 100;
 }
